--- a/index.html
+++ b/index.html
@@ -30,8 +30,76 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
+      <div class="container-fluid ms-4 me-4">
+        <a class="navbar-brand logo" href="index.html">Pris' universe</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="#">Galery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <img src="images/background.jpg" alt="" class="background-img" />
-    <h1>Hello</h1>
-    <p>A text goes here</p>
+
+    <div class="main-container">
+      <div class="container">
+        <div class="row home-container">
+          <div class="col-md-5 align-self-center">
+            <h1>Pris' universe</h1>
+            <p class="home-text">
+              Welcome to the universe where my oath is to make your dreams come
+              true.
+            </p>
+            <div>
+              <a href="#" class="btn btn-light me-3">Contact me</a>
+              <a href="#" class="btn btn-outline-light">See my work</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="social-media-links">
+      <span
+        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+          ><i class="fab fa-instagram mb-3"></i></a
+      ></span>
+      <span
+        ><a href="#" target="_blank"><i class="fab fa-pinterest-p mb-3"></i></a
+      ></span>
+      <span
+        ><a href="https://www.behance.net/P-MOGA" target="_blank"
+          ><i class="fab fa-behance"></i></a
+      ></span>
+    </div>
   </body>
 </html>
