--- a/index.html
+++ b/index.html
@@ -79,9 +79,13 @@
               Welcome to the universe where my oath is to make your dreams come
               true.
             </p>
-            <div>
-              <a href="#" class="btn btn-light me-3">Contact me</a>
-              <a href="#" class="btn btn-outline-light">See my work</a>
+            <div class="home-buttons mt-4">
+              <a href="#" class="btn primary-button me-3 home-button"
+                >Contact me</a
+              >
+              <a href="#" class="btn secondary-button home-button"
+                >See my work</a
+              >
             </div>
           </div>
         </div>
@@ -100,6 +104,23 @@
         ><a href="https://www.behance.net/P-MOGA" target="_blank"
           ><i class="fab fa-behance"></i></a
       ></span>
+    </div>
+
+    <div class="horizontal-social-media">
+      <span class="footer-text align-middle pe-2">pris' universe</span>
+      <span class="align-middle"
+        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+          ><i class="fab fa-instagram ps-3 pe-3"></i></a
+      ></span>
+      <span class="align-middle"
+        ><a href="#" target="_blank"
+          ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
+      ></span>
+      <span class="align-middle"
+        ><a href="https://www.behance.net/P-MOGA" target="_blank"
+          ><i class="fab fa-behance ps-3 pe-3"></i></a
+      ></span>
+      <span class="footer-text align-middle ps-2">Coded by MOGA</span>
     </div>
   </body>
 </html>
