Created html pages and updated links

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="#">About</a>
+              <a class="nav-link ms-3" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="#">Galery</a>
+              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3">Contact</a>
+              <a class="nav-link ms-3" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -80,10 +80,10 @@
               true.
             </p>
             <div class="home-buttons mt-4">
-              <a href="#" class="btn primary-button me-3 home-button"
+              <a href="contact.html" class="btn primary-button me-3 home-button"
                 >Contact me</a
               >
-              <a href="#" class="btn secondary-button home-button"
+              <a href="gallery.html" class="btn secondary-button home-button"
                 >See my work</a
               >
             </div>
