Added home artwork and modified responsive

--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
       </div>
     </nav>
 
-    <img src="images/background.jpg" alt="" class="background-img" />
-
     <div class="main-container">
       <div class="container">
         <div class="row home-container">
@@ -88,39 +86,51 @@
               >
             </div>
           </div>
+          <div class="col align-self-center">
+            <img
+              src="images/home-artwork.png"
+              alt=""
+              class="home-artwork img-fluid"
+            />
+            <img
+              src="images/home-artwork-vertical.png"
+              alt=""
+              class="home-artwork-vertical img-fluid"
+            />
+          </div>
+        </div>
+
+        <div class="social-media-links">
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram mb-3"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"
+              ><i class="fab fa-pinterest-p mb-3"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+        </div>
+
+        <div class="horizontal-social-media">
+          <span class="footer-text">pris' universe</span>
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+          <span class="footer-text">Coded by MOGA</span>
         </div>
       </div>
-    </div>
-
-    <div class="social-media-links">
-      <span
-        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-          ><i class="fab fa-instagram mb-3"></i></a
-      ></span>
-      <span
-        ><a href="#" target="_blank"><i class="fab fa-pinterest-p mb-3"></i></a
-      ></span>
-      <span
-        ><a href="https://www.behance.net/P-MOGA" target="_blank"
-          ><i class="fab fa-behance"></i></a
-      ></span>
-    </div>
-
-    <div class="horizontal-social-media">
-      <span class="footer-text align-middle pe-2">pris' universe</span>
-      <span class="align-middle"
-        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-          ><i class="fab fa-instagram ps-3 pe-3"></i></a
-      ></span>
-      <span class="align-middle"
-        ><a href="#" target="_blank"
-          ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
-      ></span>
-      <span class="align-middle"
-        ><a href="https://www.behance.net/P-MOGA" target="_blank"
-          ><i class="fab fa-behance ps-3 pe-3"></i></a
-      ></span>
-      <span class="footer-text align-middle ps-2">Coded by MOGA</span>
     </div>
   </body>
 </html>
