--- a/about.html
+++ b/about.html
@@ -4,7 +4,118 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About me | Pris' universe</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;500&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/1724c07b25.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
+      <div class="container-fluid ms-4 me-4">
+        <a class="navbar-brand logo" href="index.html">Pris' universe</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <img src="images/background.jpg" alt="" class="background-img" />
+
+    <div class="main-container">
+      <div class="container">
+        <div class="row mt-4">
+          <div class="col-sm-6 align-self-center">
+            <h1>Pris' universe</h1>
+            <p>
+              Welcome to the universe where my oath is to make your dreams come
+              true.
+            </p>
+          </div>
+          <div class="col-sm-6 align-self-center">
+            <img src="images/about.jpg" alt="" class="img-fluid about-img" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="social-media-links">
+      <span
+        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+          ><i class="fab fa-instagram mb-3"></i></a
+      ></span>
+      <span
+        ><a href="#" target="_blank"><i class="fab fa-pinterest-p mb-3"></i></a
+      ></span>
+      <span
+        ><a href="https://www.behance.net/P-MOGA" target="_blank"
+          ><i class="fab fa-behance"></i></a
+      ></span>
+    </div>
+
+    <div class="horizontal-social-media">
+      <span class="footer-text align-middle pe-2">pris' universe</span>
+      <span class="align-middle"
+        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+          ><i class="fab fa-instagram ps-3 pe-3"></i></a
+      ></span>
+      <span class="align-middle"
+        ><a href="#" target="_blank"
+          ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
+      ></span>
+      <span class="align-middle"
+        ><a href="https://www.behance.net/P-MOGA" target="_blank"
+          ><i class="fab fa-behance ps-3 pe-3"></i></a
+      ></span>
+      <span class="footer-text align-middle ps-2">Coded by MOGA</span>
+    </div>
+  </body>
 </html>
