Added about content and some responsive

--- a/about.html
+++ b/about.html
@@ -50,12 +50,10 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="about.html">About</a>
+              <a class="nav-link active ms-3" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link ms-3" href="gallery.html">Gallery</a>
@@ -68,54 +66,67 @@
       </div>
     </nav>
 
-    <img src="images/background.jpg" alt="" class="background-img" />
-
     <div class="main-container">
       <div class="container">
         <div class="row mt-4">
           <div class="col-sm-6 align-self-center">
             <h1>Pris' universe</h1>
             <p>
-              Welcome to the universe where my oath is to make your dreams come
-              true.
+              Hello there! My name is Priscilla. I’m a Visual Information
+              Designer and an Illustrator. My passion is creating illustrations,
+              designs and experiences that can make you feel out of this world.
+              I am a believer that each person is a world by itself, no two
+              worlds are the same so our universe is diverse. Our way of
+              communicating with other worlds is vital to fulfill our dreams. I
+              want to support you to fulfill each and every one of your dreams
             </p>
+            <div class="about-button">
+              <a
+                href="gallery.html"
+                class="btn primary-button me-3 responsive-button"
+                >See my work</a
+              >
+            </div>
           </div>
           <div class="col-sm-6 align-self-center">
-            <img src="images/about.jpg" alt="" class="img-fluid about-img" />
+            <img
+              src="images/about-img.png"
+              alt=""
+              class="img-fluid about-img"
+            />
           </div>
         </div>
+        <div class="social-media-links">
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram mb-3"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"
+              ><i class="fab fa-pinterest-p mb-3"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+        </div>
+
+        <div class="about-horizontal-social-media">
+          <span class="footer-text">pris' universe</span>
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+          <span class="footer-text">Coded by MOGA</span>
+        </div>
       </div>
-    </div>
-
-    <div class="social-media-links">
-      <span
-        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-          ><i class="fab fa-instagram mb-3"></i></a
-      ></span>
-      <span
-        ><a href="#" target="_blank"><i class="fab fa-pinterest-p mb-3"></i></a
-      ></span>
-      <span
-        ><a href="https://www.behance.net/P-MOGA" target="_blank"
-          ><i class="fab fa-behance"></i></a
-      ></span>
-    </div>
-
-    <div class="horizontal-social-media">
-      <span class="footer-text align-middle pe-2">pris' universe</span>
-      <span class="align-middle"
-        ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-          ><i class="fab fa-instagram ps-3 pe-3"></i></a
-      ></span>
-      <span class="align-middle"
-        ><a href="#" target="_blank"
-          ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
-      ></span>
-      <span class="align-middle"
-        ><a href="https://www.behance.net/P-MOGA" target="_blank"
-          ><i class="fab fa-behance ps-3 pe-3"></i></a
-      ></span>
-      <span class="footer-text align-middle ps-2">Coded by MOGA</span>
     </div>
   </body>
 </html>
