--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
               true.
             </p>
             <div class="home-buttons mt-4">
-              <a href="contact.html" class="btn primary-button me-3 home-button"
+              <a
+                href="contact.html"
+                class="btn primary-button me-3 responsive-button"
                 >Contact me</a
               >
-              <a href="gallery.html" class="btn secondary-button home-button"
+              <a
+                href="gallery.html"
+                class="btn secondary-button responsive-button"
                 >See my work</a
               >
             </div>
