Added contact content

--- a/about.html
+++ b/about.html
@@ -70,17 +70,18 @@
       <div class="container">
         <div class="row mt-4">
           <div class="col-sm-6 align-self-center">
-            <h1>Pris' universe</h1>
+            <h1>Hello there!</h1>
             <p>
-              Hello there! My name is Priscilla. I’m a Visual Information
-              Designer and an Illustrator. My passion is creating illustrations,
-              designs and experiences that can make you feel out of this world.
-              I am a believer that each person is a world by itself, no two
-              worlds are the same so our universe is diverse. Our way of
-              communicating with other worlds is vital to fulfill our dreams. I
-              want to support you to fulfill each and every one of your dreams
+              My name is Priscilla. I’m a Visual Information Designer, an
+              Illustrator and Front-end developer student! My passion is
+              creating illustrations, designs and experiences that can make you
+              feel out of this world. I am a believer that each person is a
+              world by itself, no two worlds are the same so our universe is
+              diverse. Our way of communicating with other worlds is vital to
+              fulfill our dreams. I want to support you to fulfill each and
+              every one of your dreams.
             </p>
-            <div class="about-button">
+            <div class="about-button mt-4">
               <a
                 href="gallery.html"
                 class="btn primary-button me-3 responsive-button"
