--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,146 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact me | Pris' universe</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;500&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/1724c07b25.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
+      <div class="container-fluid ms-4 me-4">
+        <a class="navbar-brand logo" href="index.html">Pris' universe</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active ms-3" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="main-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 text-center align-self-center">
+            <div>
+              <h1>Let's get in touch!</h1>
+              <p>
+                It would be my pleasure to help you bring to life a piece of
+                work of art as unique as you.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-7 text-center align-self-center">
+            <div>
+              <h5><i class="fas fa-map-marker-alt pe-2"></i>Address</h5>
+              <p>Mexico City, Mexico</p>
+            </div>
+            <div class="mt-5">
+              <h5><i class="fas fa-at pe-2"></i>Email me</h5>
+              <div><a href="">priscilla.moga@gmail.com</a></div>
+            </div>
+            <div class="mt-5">
+              <h5>Follow my work</h5>
+              <div>
+                <span
+                  ><a
+                    href="https://www.instagram.com/pris.universe/"
+                    target="_blank"
+                    ><i class="fab fa-instagram ps-3 pe-3"></i></a
+                ></span>
+                <span
+                  ><a href="#" target="_blank"
+                    ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
+                ></span>
+                <span
+                  ><a href="https://www.behance.net/P-MOGA" target="_blank"
+                    ><i class="fab fa-behance ps-3 pe-3"></i></a
+                ></span>
+                <span
+                  ><a href="https://www.behance.net/P-MOGA" target="_blank"
+                    ><i class="fab fa-linkedin-in ps-3 pe-3"></i></a
+                ></span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="social-media-links">
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram mb-3"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"
+              ><i class="fab fa-pinterest-p mb-3"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+        </div>
+
+        <div class="about-horizontal-social-media">
+          <span class="footer-text">pris' universe</span>
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+          <span class="footer-text">Coded by MOGA</span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
