--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,143 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Gallery | Pris' universe</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;500&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/1724c07b25.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
+      <div class="container-fluid ms-4 me-4">
+        <a class="navbar-brand logo" href="index.html">Pris' universe</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active ms-3" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link ms-3" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="main-container">
+      <div class="container">
+        <h1 class="text-center">Welcome to my gallery</h1>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-1.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-2.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-3.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-4.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-5.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-6.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-7.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-8.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-9.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-10.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-11.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-12.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-13.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-14.png" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img src="images/artwork-15.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+
+        <div class="gallery-horizontal-social-media">
+          <span class="footer-text">pris' universe</span>
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+          <span class="footer-text">Coded by MOGA</span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
