--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@
     </nav>
 
     <div class="main-container">
-      <div class="container">
+      <div class="container contact-container">
         <div class="row">
-          <div class="col-md-5 text-center align-self-center">
+          <div class="col-md-6 ps-5 pe-5 text-center align-self-center">
             <div>
               <h1>Let's get in touch!</h1>
               <p>
@@ -78,8 +78,8 @@
               </p>
             </div>
           </div>
-          <div class="col-md-7 text-center align-self-center">
-            <div>
+          <div class="col-md-6 text-center align-self-center">
+            <div class="mt-4">
               <h5><i class="fas fa-map-marker-alt pe-2"></i>Address</h5>
               <p>Mexico City, Mexico</p>
             </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="mt-5">
               <h5>Follow my work</h5>
-              <div>
+              <div class="mb-4">
                 <span
                   ><a
                     href="https://www.instagram.com/pris.universe/"
