--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand logo" href="index.html">Pris' universe</a>
+        <a class="navbar-brand" href="index.html">Pris' universe</a>
         <button
           class="navbar-toggler"
           type="button"
