--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,11 @@
             </div>
             <div class="mt-5">
               <h5><i class="fas fa-at pe-2"></i>Email me</h5>
-              <div><a href="">priscilla.moga@gmail.com</a></div>
+              <div>
+                <a href="mailto:priscilla.moga@gmail.com"
+                  >priscilla.moga@gmail.com</a
+                >
+              </div>
             </div>
             <div class="mt-5">
               <h5>Follow my work</h5>
@@ -105,7 +109,9 @@
                     ><i class="fab fa-behance ps-3 pe-3"></i></a
                 ></span>
                 <span
-                  ><a href="https://www.behance.net/P-MOGA" target="_blank"
+                  ><a
+                    href="https://www.linkedin.com/in/priscilla-morales-garc%C3%ADa-27a766196/"
+                    target="_blank"
                     ><i class="fab fa-linkedin-in ps-3 pe-3"></i></a
                 ></span>
               </div>
