Modified the footer to be position fixed

--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
 
-    <div class="main-container">
+    <div class="main-container" id="top">
       <div class="container">
         <h1 class="text-center">Welcome to my gallery</h1>
         <div class="row mt-4">
@@ -125,20 +125,23 @@
           </div>
         </div>
 
-        <div class="gallery-horizontal-social-media">
-          <span class="footer-text">pris' universe</span>
+        <div class="social-media-links">
           <span
             ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-              ><i class="fab fa-instagram"></i></a
+              ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+            ><a href="#" target="_blank"
+              ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
             ><a href="https://www.behance.net/P-MOGA" target="_blank"
               ><i class="fab fa-behance"></i></a
           ></span>
-          <span class="footer-text">Coded by MOGA</span>
+        </div>
+
+        <div class="arrow-to-top">
+          <a href="#top"><i class="fas fa-arrow-up"></i></a>
         </div>
       </div>
     </div>
