Modified horizontal footer properties for responsive action

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             <img
               src="images/about-img.png"
               alt=""
-              class="img-fluid about-img"
+              class="img-fluid about-img mt-3"
             />
           </div>
         </div>
@@ -113,7 +113,7 @@
           ></span>
         </div>
 
-        <div class="about-horizontal-social-media">
+        <div class="horizontal-social-media">
           <span class="footer-text">pris' universe</span>
           <span
             ><a href="https://www.instagram.com/pris.universe/" target="_blank"
