--- a/contact.html
+++ b/contact.html
@@ -134,19 +134,8 @@
           ></span>
         </div>
 
-        <div class="about-horizontal-social-media">
+        <div class="horizontal-social-media">
           <span class="footer-text">pris' universe</span>
-          <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
-              ><i class="fab fa-instagram"></i></a
-          ></span>
-          <span
-            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
-          ></span>
-          <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
-              ><i class="fab fa-behance"></i></a
-          ></span>
           <span class="footer-text">Coded by MOGA</span>
         </div>
       </div>
