--- a/gallery.html
+++ b/gallery.html
@@ -143,6 +143,22 @@
         <div class="arrow-to-top">
           <a href="#top"><i class="fas fa-arrow-up"></i></a>
         </div>
+
+        <div class="horizontal-social-media">
+          <span class="footer-text">pris' universe</span>
+          <span
+            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+              ><i class="fab fa-instagram"></i></a
+          ></span>
+          <span
+            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+          ></span>
+          <span
+            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+              ><i class="fab fa-behance"></i></a
+          ></span>
+          <span class="footer-text">Coded by MOGA</span>
+        </div>
       </div>
     </div>
   </body>
