--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           ></span>
         </div>
 
-        <div class="horizontal-social-media">
+        <div class="home-horizontal-social-media">
           <span class="footer-text">pris' universe</span>
           <span
             ><a href="https://www.instagram.com/pris.universe/" target="_blank"
