--- a/contact.html
+++ b/contact.html
@@ -79,41 +79,45 @@
             </div>
           </div>
           <div class="col-md-6 text-center align-self-center">
-            <div class="mt-4">
-              <h5><i class="fas fa-map-marker-alt pe-2"></i>Address</h5>
-              <p>Mexico City, Mexico</p>
-            </div>
-            <div class="mt-5">
-              <h5><i class="fas fa-at pe-2"></i>Email me</h5>
-              <div>
-                <a href="mailto:priscilla.moga@gmail.com"
-                  >priscilla.moga@gmail.com</a
-                >
+            <div class="contact-info">
+              <div class="mt-4">
+                <h5><i class="fas fa-map-marker-alt pe-2"></i>Address</h5>
+                <p class="address">Mexico City, Mexico</p>
               </div>
-            </div>
-            <div class="mt-5">
-              <h5>Follow my work</h5>
-              <div class="mb-4">
-                <span
-                  ><a
-                    href="https://www.instagram.com/pris.universe/"
-                    target="_blank"
-                    ><i class="fab fa-instagram ps-3 pe-3"></i></a
-                ></span>
-                <span
-                  ><a href="#" target="_blank"
-                    ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
-                ></span>
-                <span
-                  ><a href="https://www.behance.net/P-MOGA" target="_blank"
-                    ><i class="fab fa-behance ps-3 pe-3"></i></a
-                ></span>
-                <span
-                  ><a
-                    href="https://www.linkedin.com/in/priscilla-morales-garc%C3%ADa-27a766196/"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in ps-3 pe-3"></i></a
-                ></span>
+              <div class="mt-5">
+                <h5><i class="fas fa-at pe-2"></i>Email me</h5>
+                <div>
+                  <a
+                    href="mailto:priscilla.moga@gmail.com"
+                    class="text-decoration-none"
+                    >priscilla.moga@gmail.com</a
+                  >
+                </div>
+              </div>
+              <div class="mt-5">
+                <h5>Follow my work</h5>
+                <div class="mb-4 contact-links">
+                  <span
+                    ><a
+                      href="https://www.instagram.com/pris.universe/"
+                      target="_blank"
+                      ><i class="fab fa-instagram ps-3 pe-3"></i></a
+                  ></span>
+                  <span
+                    ><a href="#" target="_blank"
+                      ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
+                  ></span>
+                  <span
+                    ><a href="https://www.behance.net/P-MOGA" target="_blank"
+                      ><i class="fab fa-behance ps-3 pe-3"></i></a
+                  ></span>
+                  <span
+                    ><a
+                      href="https://www.linkedin.com/in/priscilla-morales-garc%C3%ADa-27a766196/"
+                      target="_blank"
+                      ><i class="fab fa-linkedin-in ps-3 pe-3"></i></a
+                  ></span>
+                </div>
               </div>
             </div>
           </div>
