Changed about button style

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             <div class="about-button mt-4">
               <a
                 href="gallery.html"
-                class="btn primary-button responsive-button mb-4"
+                class="btn secondary-button responsive-button mb-4"
                 >See my work</a
               >
             </div>
