--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <div class="main-container">
       <div class="container contact-container">
         <div class="row">
-          <div class="col-md-6 ps-5 pe-5 text-center align-self-center">
+          <div class="col-md-6 ps-5 pe-5 mb-4 text-center align-self-center">
             <div>
               <h1>Let's get in touch!</h1>
               <p>
@@ -78,7 +78,7 @@
               </p>
             </div>
           </div>
-          <div class="col-md-6 text-center align-self-center">
+          <div class="col-md-6 mb-4 text-center align-self-center">
             <div class="contact-info">
               <div class="mt-4">
                 <h5><i class="fas fa-map-marker-alt pe-2"></i>Address</h5>
