--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
               >
             </div>
           </div>
-          <div class="col-sm-6 align-self-center">
+          <div class="col-sm-6 mb-4 align-self-center">
             <img
               src="images/about-img.png"
               alt=""
