Made it SEO friendly

--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Check out some of the artork Pris' universe has done and get inspired to get yours."
+    />
     <title>Gallery | Pris' universe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -32,7 +36,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand" href="index.html">Pris' universe</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Pris' universe</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,16 +56,29 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="about.html">About</a>
+              <a class="nav-link ms-3" href="about.html" title="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active ms-3" href="gallery.html">Gallery</a>
+              <a
+                class="nav-link active ms-3"
+                href="gallery.html"
+                title="Gallery"
+                >Gallery</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="contact.html">Contact</a>
+              <a class="nav-link ms-3" href="contact.html" title="Contact Info"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -71,90 +90,163 @@
         <h1 class="text-center">Welcome to my gallery</h1>
         <div class="row mt-4">
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-1.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-1.png"
+              alt="Pris' universe holding hands artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-2.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-2.png"
+              alt="Pris' universe jellyfish artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-3.png" alt="" class="img-fluid" />
-          </div>
-        </div>
-        <div class="row mt-4">
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-4.png" alt="" class="img-fluid" />
-          </div>
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-5.png" alt="" class="img-fluid" />
-          </div>
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-6.png" alt="" class="img-fluid" />
-          </div>
-        </div>
-        <div class="row mt-4">
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-7.png" alt="" class="img-fluid" />
-          </div>
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-8.png" alt="" class="img-fluid" />
-          </div>
-          <div class="col-md-4 align-self-center">
-            <img src="images/artwork-9.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-3.png"
+              alt="Pris' universe camera artwork"
+              class="img-fluid"
+            />
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-10.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-4.png"
+              alt="Pris' universe pumpkin house artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-11.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-5.png"
+              alt="Pris' universe mystery eyes artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-12.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-6.png"
+              alt="Pris' universe Koi fish tatto artwork"
+              class="img-fluid"
+            />
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-13.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-7.png"
+              alt="Pris' universe irish trinity knot artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-14.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-8.png"
+              alt="Pris' universe flourish butterfly artwork"
+              class="img-fluid"
+            />
           </div>
           <div class="col-md-4 align-self-center">
-            <img src="images/artwork-15.png" alt="" class="img-fluid" />
+            <img
+              src="images/artwork-9.png"
+              alt="Pris' universe serpent artwork"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-10.png"
+              alt="Pris' universe glass bottle dream potion artwork"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-11.png"
+              alt="Pris' universe space bubbles artwork"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-12.png"
+              alt="Pris' universe moonbow artwork"
+              class="img-fluid"
+            />
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-13.png"
+              alt="Pris' universe fish and flowers artwork"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-14.png"
+              alt="Pris' universe flowers and rhombuses artwork"
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-md-4 align-self-center">
+            <img
+              src="images/artwork-15.png"
+              alt="Pris' universe wolf girl artwork"
+              class="img-fluid"
+            />
           </div>
         </div>
 
         <div class="social-media-links">
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"
+            ><a href="#" target="_blank" title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
         </div>
 
         <div class="arrow-to-top">
-          <a href="#top"><i class="fas fa-arrow-up"></i></a>
+          <a href="#top"><i class="fas fa-arrow-up" title="Go up"></i></a>
         </div>
 
         <div class="horizontal-social-media">
           <span class="footer-text">pris' universe</span>
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+            ><a href="#" target="_blank" title="Pinterest"
+              ><i class="fab fa-pinterest-p"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
           <span class="footer-text">Coded by MOGA</span>
