--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Here you can find the general information and the purpose of the owner of Pris' universe."
+    />
     <title>About me | Pris' universe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -32,7 +36,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand" href="index.html">Pris' universe</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Pris' universe</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,16 +56,28 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active ms-3" href="about.html">About</a>
+              <a class="nav-link active ms-3" href="about.html" title="About"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
+              <a class="nav-link ms-3" href="gallery.html" title="Gallery"
+                >Gallery</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="contact.html">Contact</a>
+              <a class="nav-link ms-3" href="contact.html" title="Contact Info"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -85,6 +103,7 @@
               <a
                 href="gallery.html"
                 class="btn secondary-button responsive-button mb-4"
+                title="Gallery"
                 >See my work</a
               >
             </div>
@@ -92,7 +111,7 @@
           <div class="col-sm-6 mb-4 align-self-center">
             <img
               src="images/about-img.png"
-              alt=""
+              alt="Priscilla's portrait artwork"
               class="img-fluid about-img mt-3"
             />
           </div>
@@ -100,15 +119,21 @@
 
         <div class="social-media-links">
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"
+            ><a href="#" target="_blank" title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
         </div>
@@ -116,14 +141,21 @@
         <div class="horizontal-social-media">
           <span class="footer-text">pris' universe</span>
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+            ><a href="#" target="_blank" title="Pinterest"
+              ><i class="fab fa-pinterest-p"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
           <span class="footer-text">Coded by MOGA</span>
