--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact information of Pris' universe owner. Check out social media links and send an email to contact her."
+    />
     <title>Contact me | Pris' universe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -32,7 +36,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand" href="index.html">Pris' universe</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Pris' universe</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,16 +56,29 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="about.html">About</a>
+              <a class="nav-link ms-3" href="about.html" title="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
+              <a class="nav-link ms-3" href="gallery.html" title="Gallery"
+                >Gallery</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active ms-3" href="contact.html">Contact</a>
+              <a
+                class="nav-link active ms-3"
+                href="contact.html"
+                title="Contact Info"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -90,6 +109,7 @@
                   <a
                     href="mailto:priscilla.moga@gmail.com"
                     class="text-decoration-none"
+                    title="Email me"
                     >priscilla.moga@gmail.com</a
                   >
                 </div>
@@ -101,20 +121,25 @@
                     ><a
                       href="https://www.instagram.com/pris.universe/"
                       target="_blank"
+                      title="Instagram"
                       ><i class="fab fa-instagram ps-3 pe-3"></i></a
                   ></span>
                   <span
-                    ><a href="#" target="_blank"
+                    ><a href="#" target="_blank" title="Pinterest"
                       ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
                   ></span>
                   <span
-                    ><a href="https://www.behance.net/P-MOGA" target="_blank"
+                    ><a
+                      href="https://www.behance.net/P-MOGA"
+                      target="_blank"
+                      title="Behance"
                       ><i class="fab fa-behance ps-3 pe-3"></i></a
                   ></span>
                   <span
                     ><a
                       href="https://www.linkedin.com/in/priscilla-morales-garc%C3%ADa-27a766196/"
                       target="_blank"
+                      title="LinkedIn"
                       ><i class="fab fa-linkedin-in ps-3 pe-3"></i></a
                   ></span>
                 </div>
@@ -125,15 +150,21 @@
 
         <div class="social-media-links">
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"
+            ><a href="#" target="_blank" title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
         </div>
