--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pris' universe is an illustration brand owned by Priscilla. Check out her work and get inspired. "
+    />
     <title>Welcome to Pris' universe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -32,7 +36,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light menu">
       <div class="container-fluid ms-4 me-4">
-        <a class="navbar-brand" href="index.html">Pris' universe</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Pris' universe</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,18 +56,26 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="about.html">About</a>
+              <a class="nav-link ms-3" href="about.html" title="About">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="gallery.html">Gallery</a>
+              <a class="nav-link ms-3" href="gallery.html" title="Gallery"
+                >Gallery</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-3" href="contact.html">Contact</a>
+              <a class="nav-link ms-3" href="contact.html" title="Contact Info"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -81,11 +95,13 @@
               <a
                 href="contact.html"
                 class="btn primary-button me-3 responsive-button"
+                title="Contact Info"
                 >Contact me</a
               >
               <a
                 href="gallery.html"
                 class="btn secondary-button responsive-button"
+                title="Gallery"
                 >See my work</a
               >
             </div>
@@ -93,12 +109,12 @@
           <div class="col align-self-center">
             <img
               src="images/home-artwork.png"
-              alt=""
+              alt="Pris' universe Flower artwork"
               class="home-artwork img-fluid"
             />
             <img
               src="images/home-artwork-vertical.png"
-              alt=""
+              alt="Pris' universe Flower artwork"
               class="home-artwork-vertical img-fluid"
             />
           </div>
@@ -106,15 +122,21 @@
 
         <div class="social-media-links">
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"
+            ><a href="#" target="_blank" title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
         </div>
@@ -122,14 +144,21 @@
         <div class="home-horizontal-social-media">
           <span class="footer-text">pris' universe</span>
           <span
-            ><a href="https://www.instagram.com/pris.universe/" target="_blank"
+            ><a
+              href="https://www.instagram.com/pris.universe/"
+              target="_blank"
+              title="Instagram"
               ><i class="fab fa-instagram"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a
+            ><a href="#" target="_blank" title="Pinterest"
+              ><i class="fab fa-pinterest-p"></i></a
           ></span>
           <span
-            ><a href="https://www.behance.net/P-MOGA" target="_blank"
+            ><a
+              href="https://www.behance.net/P-MOGA"
+              target="_blank"
+              title="Behance"
               ><i class="fab fa-behance"></i></a
           ></span>
           <span class="footer-text">Coded by MOGA</span>
