Added Pinterest Link

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,10 @@
                       ><i class="fab fa-instagram ps-3 pe-3"></i></a
                   ></span>
                   <span
-                    ><a href="#" target="_blank" title="Pinterest"
+                    ><a
+                      href="https://www.pinterest.com.mx/prisuniverse"
+                      target="_blank"
+                      title="Pinterest"
                       ><i class="fab fa-pinterest-p ps-3 pe-3"></i></a
                   ></span>
                   <span
@@ -157,7 +160,10 @@
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank" title="Pinterest"
+            ><a
+              href="https://www.pinterest.com.mx/prisuniverse"
+              target="_blank"
+              title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
