--- a/gallery.html
+++ b/gallery.html
@@ -213,7 +213,10 @@
               ><i class="fab fa-instagram mb-4"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank" title="Pinterest"
+            ><a
+              href="https://www.pinterest.com.mx/prisuniverse"
+              target="_blank"
+              title="Pinterest"
               ><i class="fab fa-pinterest-p mb-4"></i></a
           ></span>
           <span
@@ -239,7 +242,10 @@
               ><i class="fab fa-instagram"></i></a
           ></span>
           <span
-            ><a href="#" target="_blank" title="Pinterest"
+            ><a
+              href="https://www.pinterest.com.mx/prisuniverse"
+              target="_blank"
+              title="Pinterest"
               ><i class="fab fa-pinterest-p"></i></a
           ></span>
           <span
