Last minute details

--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
             <div>
               <h1>Let's get in touch!</h1>
               <p>
-                It would be my pleasure to help you bring to life a piece of
-                work of art as unique as you.
+                It would be my pleasure to help you bring to life a work of art
+                as unique as you.
               </p>
             </div>
             <div class="mt-5">
